--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -19,6 +19,8 @@
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "react": "^19.2.3",
-    "react-dom": "^19.2.3"
+    "react-dom": "^19.2.3",
+    "next": "16.1.1"
+
   }
 }
